[gd_scene load_steps=11 format=3 uid="uid://bep7cy8n0dexa"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_dlyoq"]
[ext_resource type="MeshLibrary" uid="uid://c4a067u1h7ru1" path="res://level_proto_library.tres" id="2_30mko"]
[ext_resource type="Script" path="res://scripts/GridMap.gd" id="3_n4n4f"]
[ext_resource type="Script" path="res://scripts/Pivot.gd" id="4_fmoja"]
[ext_resource type="PackedScene" uid="uid://dx1ftbc6k275w" path="res://scenes/cursor_scene.tscn" id="5_a0fbe"]
[ext_resource type="Script" path="res://scripts/cursor_scene.gd" id="6_2bd13"]
[ext_resource type="Script" path="res://scripts/mouse_interactor.gd" id="7_chkda"]
[ext_resource type="PackedScene" uid="uid://cvedjnx6imrx5" path="res://scenes/character.tscn" id="8_m7spp"]
[ext_resource type="Script" path="res://scripts/character.gd" id="9_78lih"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_utfnf"]

[node name="Level" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
script = ExtResource("1_dlyoq")

[node name="Floor Grid" type="GridMap" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.5)
mesh_library = ExtResource("2_30mko")
physics_material = SubResource("PhysicsMaterial_utfnf")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(0, 1, 0, 0, 2, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 2, 1, 1441793, 2, 0, 1441793, 2, 65535, 1441793, 2, 65534, 1441793, 1, 65534, 0, 2, 65532, 1441793, 2, 65533, 1441793, 1, 65533, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 1, 65535, 0, 1, 65532, 0, 4, 65528, 0, 2, 65530, 1441793, 1, 65531, 0, 0, 65532, 0, 65535, 65534, 0, 65535, 65535, 0, 3, 65528, 0, 4, 65527, 0, 1, 65530, 0, 2, 65529, 1441793, 0, 65531, 0, 0, 65530, 0, 1, 65529, 0, 2, 65528, 0, 2, 65531, 1441793, 0, 65529, 0, 0, 65528, 0, 65535, 65528, 0, 65535, 65527, 0, 65535, 65526, 0, 65535, 65525, 0, 65535, 65524, 0, 65534, 65523, 0, 65533, 65523, 0, 65532, 65523, 0, 65531, 65523, 0, 65530, 65523, 0, 65529, 65523, 0, 65529, 65524, 0, 65528, 65523, 0, 65527, 65523, 0, 65528, 65522, 0, 65528, 65521, 0, 65529, 65521, 0, 65530, 65521, 0, 65531, 65521, 0, 65531, 65522, 0, 65532, 65522, 0, 65533, 65522, 0, 65530, 65522, 0, 65529, 65522, 0, 65527, 65522, 0, 65527, 65524, 0, 65528, 65524, 0, 65528, 65525, 0, 65528, 65526, 0, 65528, 65527, 0, 65527, 65525, 0, 65528, 65528, 0, 65529, 65528, 0, 65528, 65529, 0, 65529, 65529, 0, 65529, 65527, 0, 65529, 65526, 0, 65529, 65525, 0, 65529, 65530, 0, 65529, 65531, 0, 65529, 65532, 0, 65529, 65533, 0, 65530, 65533, 0, 65530, 65534, 0, 65530, 65535, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65532, 65535, 0, 65533, 65535, 0, 65534, 65535, 0, 65534, 65534, 0, 65533, 65534, 0, 65532, 65534, 0, 65531, 65535, 0, 65529, 65535, 0, 65531, 65534, 0, 65531, 65533, 0, 65532, 65533, 0, 65533, 65533, 0, 65534, 65533, 0, 65535, 65533, 0, 65527, 65534, 0, 65528, 65534, 0, 65528, 65533, 0, 65529, 65534, 0, 65528, 65532, 0, 65527, 65532, 0, 65527, 65531, 0, 65527, 65530, 0, 65527, 65529, 0, 65527, 65528, 0, 65527, 65527, 0, 65527, 65526, 0, 65528, 65531, 0, 65528, 65530, 0, 65527, 65533, 0, 65529, 0, 0, 65527, 65521, 0, 65532, 65521, 0, 65533, 65521, 0, 65534, 65521, 0, 65534, 65522, 0, 65535, 65522, 0, 0, 65522, 0, 65535, 65521, 0, 0, 65521, 0, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 65535, 65523, 0, 65535, 65529, 0, 65535, 65530, 0, 65535, 65531, 0, 65535, 65532, 0, 1, 65527, 0, 2, 65527, 0, 1, 65528, 0, 3, 65527, 0, 4, 65526, 0, 3, 65526, 0, 2, 65526, 0, 1, 65526, 0, 1, 65525, 0, 1, 65524, 0, 1, 65523, 0, 1, 65522, 0, 1, 65521, 0, 65532, 1, 0, 65532, 2, 1441793, 65532, 3, 1441793, 65531, 3, 1441793, 65530, 3, 1441793, 65529, 3, 1441793, 65529, 1, 0, 65529, 2, 1441793, 65530, 2, 1441793, 65530, 1, 0, 65531, 1, 0, 65531, 2, 1441793, 0, 3, 0, 1, 3, 0, 65528, 65535, 0, 65527, 65535, 0, 2, 2, 1441793, 2, 3, 1441793, 131069, 0, 1, 131070, 0, 1, 131071, 0, 1, 131071, 1, 1, 131071, 2, 1, 131071, 3, 1, 131070, 3, 1, 131069, 3, 1441793, 131069, 2, 1, 131069, 1, 1, 131070, 2, 1, 131070, 1, 1, 65535, 3, 1, 65534, 3, 1, 65533, 3, 1, 196607, 2, 1, 196606, 2, 1, 196605, 2, 1, 65535, 2, 1, 65535, 1, 1, 65535, 0, 1, 65534, 0, 1, 65533, 0, 1, 65533, 1, 1, 65533, 2, 1441793, 65534, 2, 1, 65534, 1, 1, 196607, 1, 1, 196607, 0, 0, 196606, 0, 0, 196605, 0, 0, 196605, 1, 1, 196606, 1, 1, 196607, 3, 1, 196606, 3, 1, 196605, 3, 1, 262143, 1, 0, 262142, 1, 0, 262141, 1, 0, 262141, 2, 0, 262142, 2, 0, 262143, 2, 0, 262143, 3, 0, 262142, 3, 0, 262141, 3, 0, 131068, 65532, 0, 131067, 65532, 1, 131066, 65532, 1, 131066, 65531, 1, 131066, 65530, 1, 131066, 65529, 1, 131066, 65528, 1, 131066, 65527, 1, 131066, 65526, 1, 131066, 65525, 1, 131067, 65524, 0, 131068, 65524, 0, 131069, 65524, 1, 131070, 65524, 1, 131070, 65525, 1, 131070, 65526, 1, 131070, 65527, 1, 131070, 65528, 1, 131070, 65529, 1, 131070, 65530, 1441793, 131067, 65531, 1, 131068, 65531, 1, 131068, 65530, 1, 131069, 65530, 1, 131068, 65529, 1, 131068, 65528, 1, 131069, 65528, 1, 131069, 65527, 1, 131069, 65526, 1, 131069, 65529, 1, 131069, 65525, 1, 131068, 65525, 1, 131067, 65525, 1, 131067, 65526, 1, 131067, 65527, 1, 131067, 65528, 1, 131067, 65529, 1, 131067, 65530, 1, 131068, 65527, 1, 131068, 65526, 1, 196605, 65530, 1441793, 196605, 65529, 1441793, 196605, 65528, 1441793, 196605, 65527, 1441793, 196606, 65527, 1441793, 196606, 65528, 1441793, 196606, 65529, 1441793, 196606, 65526, 1441793, 196606, 65525, 1441793, 196606, 65524, 1441793, 196605, 65524, 1441793, 196605, 65525, 1441793, 196604, 65525, 0, 196604, 65526, 0, 196604, 65527, 1441793, 196605, 65526, 1441793, 196602, 65525, 0, 196603, 65525, 0, 196603, 65526, 0, 196602, 65526, 0, 196602, 65527, 1441793, 196603, 65527, 1441793, 196603, 65528, 1441793, 196602, 65528, 1441793, 196602, 65529, 1441793, 196603, 65529, 1441793, 196604, 65529, 1441793, 196604, 65528, 1441793, 196604, 65530, 1441793, 196604, 65531, 0, 196603, 65531, 0, 196603, 65532, 0, 196602, 65532, 0, 196602, 65531, 0, 196603, 65530, 1441793, 196602, 65530, 1441793, 131069, 65531, 0, 131070, 65531, 0, 196606, 65530, 1441793, 65534, 65532, 1441793, 65533, 65532, 1441793, 65532, 65532, 1441793, 65531, 65532, 1441793, 65530, 65532, 1441793, 65530, 65531, 1441793, 65531, 65531, 1441793, 65531, 65530, 1441793, 65532, 65530, 1441793, 65532, 65531, 1441793, 65533, 65531, 1441793, 65533, 65530, 1441793, 65533, 65529, 1441793, 65534, 65531, 1441793, 65534, 65530, 1441793, 65534, 65529, 1441793, 65534, 65528, 1441793, 65534, 65527, 1441793, 65534, 65526, 1441793, 65534, 65525, 1441793, 65533, 65525, 1441793, 65534, 65524, 1441793, 65533, 65524, 1441793, 65532, 65524, 1441793, 65531, 65524, 1441793, 65530, 65524, 1441793, 65530, 65525, 1441793, 65530, 65526, 1441793, 65530, 65527, 1441793, 65530, 65528, 1441793, 65530, 65529, 1441793, 65530, 65530, 1441793, 65532, 65529, 1441793, 65532, 65528, 1441793, 65532, 65527, 1441793, 65532, 65526, 1441793, 65532, 65525, 1441793, 65531, 65526, 1441793, 65531, 65527, 1441793, 65531, 65528, 1441793, 65531, 65529, 1441793, 65531, 65525, 1441793, 65533, 65527, 1441793, 65533, 65528, 1441793, 65533, 65526, 1441793, 65528, 0, 1441793, 65528, 1, 1441793, 65528, 2, 1441793, 65528, 3, 1441793, 65527, 3, 1441793, 65527, 2, 1441793, 65527, 1, 1441793, 65527, 0, 1441793, 3, 65529, 1441793, 4, 65529, 1441793, 4, 65530, 1441793, 3, 65530, 1441793, 3, 65531, 1441793, 3, 65532, 1441793, 3, 65533, 1441793, 3, 65534, 1441793, 3, 65535, 1441793, 3, 0, 1441793, 3, 1, 1441793, 3, 2, 1441793, 3, 3, 1441793, 4, 65535, 1441793, 4, 65534, 1441793, 4, 65533, 1441793, 4, 65532, 1441793, 4, 65531, 1441793, 4, 0, 1441793, 4, 1, 1441793, 4, 2, 1441793, 4, 3, 1441793, 2, 65525, 1441793, 3, 65525, 1441793, 4, 65525, 1441793, 4, 65524, 1441793, 3, 65524, 1441793, 2, 65524, 1441793, 2, 65523, 1441793, 2, 65522, 1, 2, 65521, 0, 3, 65522, 1, 4, 65522, 1, 4, 65523, 1441793, 3, 65523, 1441793, 3, 65521, 0, 65538, 65524, 1441793, 65539, 65524, 1441793, 65540, 65524, 1441793, 65540, 65523, 1441793, 65539, 65523, 1441793, 65538, 65523, 1441793, 65538, 65522, 0, 65539, 65522, 0, 65540, 65522, 0, 65540, 65525, 1441793, 65539, 65525, 1441793, 65538, 65525, 1441793, 131074, 65524, 0, 131074, 65525, 1441793, 131075, 65525, 1441793, 131075, 65524, 1441793, 131076, 65524, 1441793, 131076, 65525, 1441793, 131074, 65523, 0, 131075, 65523, 0, 131076, 65523, 0, 196610, 65525, 0, 196610, 65524, 0, 196609, 65524, 0, 196609, 65525, 0, 196608, 65525, 0, 262143, 65525, 0, 262143, 65524, 0, 262142, 65525, 0, 262142, 65524, 0, 196608, 65524, 0, 262141, 65524, 0, 262141, 65525, 0, 262142, 65526, 0, 262142, 65527, 0, 262142, 65528, 0, 262141, 65528, 0, 262141, 65527, 0, 262142, 65529, 0, 262142, 65530, 0, 262141, 65530, 0, 262141, 65529, 0, 262140, 65530, 0, 262139, 65530, 0, 262139, 65529, 0, 262138, 65530, 0, 262140, 65529, 0, 262140, 65528, 0, 262139, 65528, 0, 262138, 65529, 0, 262138, 65528, 0, 262138, 65527, 0, 196611, 65525, 0, 196611, 65524, 0, 196612, 65524, 0, 196612, 65525, 0, 131064, 0, 1441793, 131063, 0, 1441793, 131063, 1, 1441793, 131064, 1, 1441793, 131064, 2, 1441793, 131063, 2, 1441793, 131064, 3, 1441793, 131063, 3, 1441793, 196600, 0, 1441793, 196599, 0, 1441793, 196599, 1, 1441793, 196599, 2, 1441793, 196599, 3, 1441793, 196600, 3, 0, 196600, 2, 0, 196600, 1, 1441793, 262136, 1, 0, 262135, 2, 0, 262135, 3, 0, 262137, 65530, 0, 262137, 65529, 0, 262136, 65530, 0, 262136, 65529, 0, 262135, 65529, 0, 262135, 65530, 0, 262135, 65531, 0, 262136, 65531, 0, 262136, 65532, 0, 262135, 65532, 0, 262135, 65533, 0, 262136, 65533, 0, 262136, 65534, 0, 262136, 65535, 0, 262135, 65535, 0, 262135, 0, 0, 262136, 0, 0, 262135, 65534, 0, 131068, 2, 1441793, 131067, 2, 0, 131066, 2, 0, 131065, 2, 0, 131065, 3, 0, 131066, 3, 0, 131067, 3, 0, 131068, 3, 1441793, 196604, 3, 0, 196604, 2, 0, 262135, 1, 0, 262139, 65527, 0, 262140, 65527, 0, 262141, 65526, 0, 4, 65521, 0)
}
script = ExtResource("3_n4n4f")
metadata/_editor_floor_ = Vector3(0, 0, 3)
metadata/is_grid = true

[node name="Pivot" type="Node3D" parent="."]
script = ExtResource("4_fmoja")

[node name="Main Camera" type="Camera3D" parent="Pivot"]
transform = Transform3D(0.707107, -0.353553, 0.612372, 0, 0.866025, 0.5, -0.707107, -0.353553, 0.612372, 30, 30, 30)
projection = 1
size = 25.0
far = 1000.0

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Cursor Scene" parent="." instance=ExtResource("5_a0fbe")]
script = ExtResource("6_2bd13")

[node name="Mouse Interactor" type="Node3D" parent="."]
script = ExtResource("7_chkda")

[node name="Character" parent="." instance=ExtResource("8_m7spp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2)
script = ExtResource("9_78lih")
metadata/is_character = true

[connection signal="tile_hover" from="Floor Grid" to="Cursor Scene" method="_on_floor_grid_tile_hover"]
[connection signal="clear_cursor" from="Mouse Interactor" to="Cursor Scene" method="_on_mouse_interactor_clear_cursor"]
[connection signal="mouse_down" from="Mouse Interactor" to="Cursor Scene" method="_on_mouse_interactor_mouse_down"]
[connection signal="mouse_down" from="Mouse Interactor" to="Character" method="_on_mouse_interactor_mouse_down"]
[connection signal="mouse_over_grid" from="Mouse Interactor" to="Floor Grid" method="_on_mouse_interactor_mouse_over_grid"]
